Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -35,6 +35,15 @@
 </ul>
 
 <h2>
+<a id="preinstalled-packages" class="anchor" href="#preinstalled-packages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Preinstalled packages</h2>
+
+<p>This application requires two additional packages beyond the base packages and those already added for meteor-application-template:</p>
+
+<pre><code>aldeed:collection2             2.10.0  Automatic validation of insert and update operations on the client and server.
+reactive-dict                  1.1.8  Reactive dictionary
+</code></pre>
+
+<h2>
 <a id="ui-walkthrough" class="anchor" href="#ui-walkthrough" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>UI Walkthrough</h2>
 
 <p>The home page of this application presents the Create Student Data page:</p>
