Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -127,20 +127,20 @@ reactive-dict                  1.1.8  Reactive dictionary
 
 <p>The other significant difference on this page is the invocation of helper functions to provide values for all of the form values. </p>
 
-<p>Moving to the Javascript code, <a href="https://github.com/ics-software-engineering/meteor-example-form/blob/master/app/imports/ui/pages/edit-student-data-page.html#L14-L16">edit-student-data-page#L14-L16</a> shows how to set up the subscription to the StudentData collection. In reality, this page does not need the entire StudentData collection, only the specific document referenced in the URL, so a more efficient solution would be a subscription that only retrieves a single document. But this approach was chosen as the simplest one since the focus is on form processing.</p>
+<p>Moving to the Javascript code, <a href="https://github.com/ics-software-engineering/meteor-example-form/blob/master/app/imports/ui/pages/edit-student-data-page.js#L14-L16">edit-student-data-page#L14-L16</a> shows how to set up the subscription to the StudentData collection. In reality, this page does not need the entire StudentData collection, only the specific document referenced in the URL, so a more efficient solution would be a subscription that only retrieves a single document. But this approach was chosen as the simplest one since the focus is on form processing.</p>
 
-<p><a href="https://github.com/ics-software-engineering/meteor-example-form/blob/master/app/imports/ui/pages/edit-student-data-page.html#L24-L70">edit-student-data-page#L24-L70</a> show the helper functions. Several of these refer to the URL to determine the id of the StudentData document of interest, then return a value appropriate to setting a form field value.  The remainder replicate the validation handlers from the Create Student Data page.</p>
+<p><a href="https://github.com/ics-software-engineering/meteor-example-form/blob/master/app/imports/ui/pages/edit-student-data-page.js#L24-L70">edit-student-data-page#L24-L70</a> show the helper functions. Several of these refer to the URL to determine the id of the StudentData document of interest, then return a value appropriate to setting a form field value.  The remainder replicate the validation handlers from the Create Student Data page.</p>
 
-<p><a href="https://github.com/ics-software-engineering/meteor-example-form/blob/master/app/imports/ui/pages/edit-student-data-page.html#L72-L85">edit-student-data-page#L72-L85</a> shows that in the case of this page where we have subscriptions, the Semantic UI Javascript initialization code must be in a Tracker.afterFlush callback which is itself in an onRendered callback. Wow.</p>
+<p><a href="https://github.com/ics-software-engineering/meteor-example-form/blob/master/app/imports/ui/pages/edit-student-data-page.js#L72-L85">edit-student-data-page#L72-L85</a> shows that in the case of this page where we have subscriptions, the Semantic UI Javascript initialization code must be in a Tracker.afterFlush callback which is itself in an onRendered callback. Wow.</p>
 
-<p>Finally, the submit event handler is identical to the one in the Create Student Data page except for <a href="https://github.com/ics-software-engineering/meteor-example-form/blob/master/app/imports/ui/pages/edit-student-data-page.html#L119">edit-student-data-page#L119</a> which calls update rather than insert.</p>
+<p>Finally, the submit event handler is identical to the one in the Create Student Data page except for <a href="https://github.com/ics-software-engineering/meteor-example-form/blob/master/app/imports/ui/pages/edit-student-data-page.js#L119">edit-student-data-page#L119</a> which calls update rather than insert.</p>
 
 <h2>
 <a id="screencast" class="anchor" href="#screencast" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Screencast</h2>
 
-<p>Click the image below to watch a 27 minute walkthrough of this system.</p>
+<p>Click the image below to watch a 19 minute walkthrough of this system.</p>
 
-<p><a href="https://www.youtube.com/watch?v=kEJN3kjyugs"><img src="https://raw.githubusercontent.com/ics-software-engineering/meteor-application-template/master/doc/meteor-application-template-youtube.png" width="600"></a></p>
+<p><a href="https://www.youtube.com/watch?v=cEoPDdY-iW4"><img src="https://github.com/ics-software-engineering/meteor-example-form/raw/master/doc/meteor-example-form-youtube.png" width="600"></a></p>
 
 <h2>
 <a id="miscellaneous-issues" class="anchor" href="#miscellaneous-issues" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Miscellaneous issues</h2>
