Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ reactive-dict                  1.1.8  Reactive dictionary
 
 <p>Click the image below to watch a 19 minute walkthrough of this system.</p>
 
-<p><a href="https://www.youtube.com/watch?v=cEoPDdY-iW4"><img src="https://github.com/ics-software-engineering/meteor-example-form/raw/master/doc/meteor-example-form-youtube.png" width="600"></a></p>
+<p><a href="https://www.youtube.com/watch?v=22nbaQwtS3U"><img src="https://github.com/ics-software-engineering/meteor-example-form/raw/master/doc/meteor-example-form-youtube.png" width="600"></a></p>
 
 <h2>
 <a id="miscellaneous-issues" class="anchor" href="#miscellaneous-issues" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Miscellaneous issues</h2>
